Update and rename ASER to 1.0.1

--- a/1.0.1
+++ b/1.0.1
@@ -7,7 +7,7 @@ local Window = Library.CreateLib("Helor HUB", "RJTheme5")
 local Tab = Window:NewTab("Universal")
 
 -- Подсекция
-local Section = Tab:NewSection("Helor HUB(ALPHA)")
+local Section = Tab:NewSection("Helor HUB(Beta)")
 
 -- Заголовок
 Section:NewLabel("FUNCTIONS")
@@ -56,7 +56,7 @@ end)
 local Tab = Window:NewTab("Murder Mystery 2")
 
 -- Подсекция
-local Section = Tab:NewSection("Helor HUB(ALPHA)")
+local Section = Tab:NewSection("Helor HUB(Beta)")
 
 -- Заголовок
 Section:NewLabel("FUNCTIONS")
@@ -92,7 +92,7 @@ end)
 local Tab = Window:NewTab("Prison Life")
 
 -- Подсекция
-local Section = Tab:NewSection("Helor HUB(ALPHA)")
+local Section = Tab:NewSection("Helor HUB(Beta)")
 
 -- Заголовок
 Section:NewLabel("FUNCTIONS")
@@ -134,7 +134,7 @@ end)
 local Tab = Window:NewTab("L.B.B")
 
 -- Подсекция
-local Section = Tab:NewSection("Helor HUB(ALPHA)")
+local Section = Tab:NewSection("Helor HUB(Beta)")
 
 -- Заголовок
 Section:NewLabel("FUNCTIONS")
@@ -154,7 +154,7 @@ end)
 local Tab = Window:NewTab("Evade")
 
 -- Подсекция
-local Section = Tab:NewSection("Helor HUB(ALPHA)")
+local Section = Tab:NewSection("Helor HUB(Beta)")
 
 -- Заголовок
 Section:NewLabel("FUNCTIONS")
@@ -168,7 +168,7 @@ end)
 local Tab = Window:NewTab("Settings")
 
 -- Подсекция
-local Section = Tab:NewSection("Helor HUB(ALPHA)")
+local Section = Tab:NewSection("Helor HUB(Beta)")
 
 -- Заголовок
 Section:NewLabel("CREDITS: SCRIPTINGERIN and viktor_vary")
