--- a/1.0.1
+++ b/1.0.1
@@ -1,5 +1,5 @@
 -- Ссылка на Библиотеку
-local Library = loadstring(game:HttpGet("https://raw.githubusercontent.com/Robojini/Tuturial_UI_Library/main/UI_Template_1"))()
+local Library = loadstring(game:HttpGet("https://raw.githubusercontent.com/SCRIPTINGER/HELOR-HUB/main/1.0.1"))()
 -- Создать окно UI
 local Window = Library.CreateLib("Helor HUB", "RJTheme5")
 
