--- a/1.0.1
+++ b/1.0.1
@@ -1,179 +1,1 @@
--- Ссылка на Библиотеку
-local Library = loadstring(game:HttpGet("https://raw.githubusercontent.com/Robojini/Tuturial_UI_Library/main/UI_Template_1"))()
--- Создать окно UI
-local Window = Library.CreateLib("Helor HUB", "RJTheme5")
-
--- Секция
-local Tab = Window:NewTab("Universal")
-
--- Подсекция
-local Section = Tab:NewSection("Helor HUB(Beta)")
-
--- Заголовок
-Section:NewLabel("FUNCTIONS")
-
--- Кнопка
-Section:NewButton("FLY(NO WORK)", "FLYING", function()
-    loadstring(game:HttpGet("https://pastebin.com/22JP8jDq"))()
-end)
--- Кнопка
-Section:NewButton("Infinite Yield", "ADMIN COMMANDS", function()
-    loadstring(game:HttpGet('https://raw.githubusercontent.com/EdgeIY/infiniteyield/master/source'))()
-end)
--- Переключатель
-Section:NewToggle("NO WORK", "ToggleInfo", function(state)
-    if state then
-        
-    else
-        
-    end
-end)
--- Слайдер
-Section:NewSlider("JumpPower", "SliderInfo", 1000, 0, function(s) -- 1000 (Макс. значение) | 0 (Мин. значение)
-    game.Players.LocalPlayer.Character.Humanoid.JumpPower = j
-end)
-
--- Слайдер
-Section:NewSlider("SPEED", "SliderInfo", 1000, 0, function(s) -- 1000 (Макс. значение) | 0 (Мин. значение)
-    game.Players.LocalPlayer.Character.Humanoid.WalkSpeed = s
-end)
-
--- Текст Бокс
-Section:NewTextBox("Print in the Console", "TextboxInfo", function(txt)
-	print(txt)
-end)
-
--- Бинд на клавиши
-Section:NewKeybind("NO WORK", "KeybindInfo", Enum.KeyCode.F, function()
-	
-end)
-
--- Дропдаун
-Section:NewDropdown("NO WORK", "DropdownInf", {"Option 1", "Option 2", "Option 3"}, function(currentOption)
-    
-end)
--- Секция
-local Tab = Window:NewTab("Murder Mystery 2")
-
--- Подсекция
-local Section = Tab:NewSection("Helor HUB(Beta)")
-
--- Заголовок
-Section:NewLabel("FUNCTIONS")
-
--- Кнопка
-Section:NewButton("YARM", "ButtonInfo", function()
-    loadstring(game:HttpGet("https://scriptblox.com/raw/Universal-Script-YARHM-12403"))()
-end)
-
--- Кнопка
-Section:NewButton("GHOSTHUB", "ButtonInfo", function()
-    loadstring(game:HttpGet('https://raw.githubusercontent.com/GhostPlayer352/Test4/main/GhostHub'))()
-end)
-
--- Кнопка
-Section:NewButton("ADMIN PANEL", "ButtonInfo", function()
-    loadstring(game:HttpGet('https://pastebin.com/raw/e89Mn4Ec'))()
-end)
-
--- Кнопка
-Section:NewButton("R3THPRIV", "ButtonInfo", function()
-    loadstring(game:HttpGet('https://raw.githubusercontent.com/R3TH-PRIV/R3THPRIV/main/loader.lua'))()
-end)
-Section:NewButton("Noclip", "ButtonInfo", function()
-    loadstring(game:HttpGet("https://raw.githubusercontent.com/SCRIPTINGER/HELOR-HUB/main/NOCLIP.lua"))()
-end)
-
--- Слайдер
-Section:NewSlider("SPEED", "SliderInfo", 1000, 0, function(s) -- 1000 (Макс. значение) | 0 (Мин. значение)
-    game.Players.LocalPlayer.Character.Humanoid.WalkSpeed = s
-end)
--- Секция
-local Tab = Window:NewTab("Prison Life")
-
--- Подсекция
-local Section = Tab:NewSection("Helor HUB(Beta)")
-
--- Заголовок
-Section:NewLabel("FUNCTIONS")
-
--- Кнопка
-Section:NewButton("PrizzLife", "ButtonInfo", function()
-    loadstring(game:HttpGet('https://raw.githubusercontent.com/elliexmln/PrizzLife/main/pladmin.lua'))()
-end)
-Section:NewButton("Noclip", "ButtonInfo", function()
-   loadstring(game:HttpGet("https://raw.githubusercontent.com/SCRIPTINGER/HELOR-HUB/main/NOCLIP.lua"))()
-end)
--- Слайдер
-Section:NewSlider("SPEED", "SliderInfo", 1000, 0, function(s) -- 1000 (Макс. значение) | 0 (Мин. значение)
-    game.Players.LocalPlayer.Character.Humanoid.WalkSpeed = s
-end)
--- Секция
-local Tab = Window:NewTab("Flee The Facility")
-
--- Подсекция
-local Section = Tab:NewSection("Helor HUB(ALPHA)")
-
--- Заголовок
-Section:NewLabel("FUNCTIONS")
-
--- Кнопка
-Section:NewButton("YARM", "ButtonInfo", function()
-    loadstring(game:HttpGet('loadstring(game:HttpGet("https://scriptblox.com/raw/Universal-Script-YARHM-12403"))()'))()
-end)
--- Кнопка
-Section:NewButton("Noclip", "ButtonInfo", function()
-    loadstring(game:HttpGet("https://raw.githubusercontent.com/SCRIPTINGER/HELOR-HUB/main/NOCLIP.lua"))()
-end)
--- Слайдер
-Section:NewSlider("SPEED", "SliderInfo", 1000, 0, function(s) -- 1000 (Макс. значение) | 0 (Мин. значение)
-    game.Players.LocalPlayer.Character.Humanoid.WalkSpeed = s
-end)
-
--- Секция
-local Tab = Window:NewTab("L.B.B")
-
--- Подсекция
-local Section = Tab:NewSection("Helor HUB(Beta)")
-
--- Заголовок
-Section:NewLabel("FUNCTIONS")
-
--- Кнопка
-Section:NewButton("Lucky", "ButtonInfo", function()
-    loadstring(game:HttpGet(('https://raw.githubusercontent.com/stillnotgivingafuck/LuckyBlocks/main/loader.lua')))()
-end)
-Section:NewButton("Noclip", "ButtonInfo", function()
-    loadstring(game:HttpGet("https://raw.githubusercontent.com/SCRIPTINGER/HELOR-HUB/main/NOCLIP.lua"))()
-end)
-
--- Слайдер
-Section:NewSlider("SPEED", "SliderInfo", 1000, 0, function(s) -- 1000 (Макс. значение) | 0 (Мин. значение)
-    game.Players.LocalPlayer.Character.Humanoid.WalkSpeed = s
-end)
-local Tab = Window:NewTab("Evade")
-
--- Подсекция
-local Section = Tab:NewSection("Helor HUB(Beta)")
-
--- Заголовок
-Section:NewLabel("FUNCTIONS")
-
--- Кнопка
-Section:NewButton("Hydro Hub", "ButtonInfo", function()
-    loadstring(game:HttpGet("https://raw.githubusercontent.com/FRX397/Hydrohub/main/Hydro_hub", true))()
-end)
-
--- Секция
-local Tab = Window:NewTab("Settings")
-
--- Подсекция
-local Section = Tab:NewSection("Helor HUB(Beta)")
-
--- Заголовок
-Section:NewLabel("CREDITS: SCRIPTINGERIN and viktor_vary")
-
--- Кнопка
-Section:NewButton("EXIT", "ButtonInfo", function()
-    
-end)
+deleted
