Update and rename MAIN HELOR HUB to 1.0.3

--- a/1.0.3
+++ b/1.0.3
@@ -1,7 +1,7 @@
 -- Ссылка на Библиотеку
 local Library = loadstring(game:HttpGet("https://raw.githubusercontent.com/Robojini/Tuturial_UI_Library/main/UI_Template_1"))()
 -- Создать окно UI
-local Window = Library.CreateLib("Helor HUB FREE PREMIUM MAIN", "RJTheme5")
+local Window = Library.CreateLib("Helor HUB MAIN", "RJTheme5")
 
 -- Секция
 local Tab = Window:NewTab("Settings")
@@ -17,6 +17,6 @@ Section:NewButton("EXIT", "KICKED YOU", function()
     game.Players.LocalPlayer:Kick("bruh you leave")
 end)
 -- Кнопка
-Section:NewButton("ACTIVATE", "Helor HUB", function()
-    loadstring(game:HttpGet("https://raw.githubusercontent.com/SCRIPTINGER/HELOR-HUB/main/1.0.2?token=GHSAT0AAAAAACTZUFQAPTRP3CHXA4IOHJX4ZTTTFDQ"))()
+Section:NewButton("Activate", "Helor HUB", function()
+    loadstring(game:HttpGet('https://raw.githubusercontent.com/SCRIPTINGER/HELOR-HUB/main/1.0.3?token=GHSAT0AAAAAACTZUFQA4Z5Z223FMYAAMV6KZTT2KYQ'))()
 end)
